[gd_scene load_steps=3 format=3 uid="uid://1jtccymaf7ri"]

[ext_resource type="Script" uid="uid://0myp6e6gal3w" path="res://scripts/menus/playtest_end.gd" id="1_vntc1"]
[ext_resource type="FontFile" uid="uid://cu184tq6oycu2" path="res://assets/05_Fonts/KINDGARG.TTF" id="2_hlqsk"]

[node name="DemoEnd" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vntc1")

[node name="TextFields" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="TextFields"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -678.5
offset_top = -243.0
offset_right = 678.5
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2

[node name="DemoEnd_text" type="Label" parent="TextFields/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hlqsk")
theme_override_font_sizes/font_size = 72
text = "Thank you for playing the demo of Emu Parade.

I would greatly appreciate any feedback about
the game you may have.

You will find a QR code with a link to a short survey
via the Main Menu.

Thank you.
"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="TextFields/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_hlqsk")
theme_override_font_sizes/font_size = 72
text = "Return to Main Menu"

[node name="BlackBG" type="ColorRect" parent="TextFields"]
z_index = -1
offset_left = -129.0
offset_top = -106.0
offset_right = 2072.0
offset_bottom = 1205.0
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="TextFields/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
